[package]
name = "cod_matchmaking_sim"
version = "0.1.0"
edition = "2021"
description = "Call of Duty-style matchmaking simulation for research"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug = []

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# For better error messages in WASM
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
